修改资讯详情的页面模版，重构JS

--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -17,6 +17,7 @@
     <attr name="cardBackground" format="color|reference"/>
     <attr name="refBackground" format="color|reference"/>
     <attr name="titleColor" format="color|reference"/>
+    <attr name="indicatorColor" format="color|reference"/>
     <attr name="subTitleColor" format="color|reference"/>
     <attr name="toolbarTheme"  format="reference"/>
     <attr name="toolbarPopupTheme"  format="reference"/>
