--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -15,7 +15,7 @@
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:visibility="gone"
-        app:indicator_color="?colorPrimary"/>
+        app:indicator_color="?indicatorColor"/>
 
     <TextView
         android:id="@+id/message"
