--- a/app/src/main/res/layout/drawer_list_item.xml
+++ b/app/src/main/res/layout/drawer_list_item.xml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<TextView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@android:id/text1"
     android:layout_width="match_parent"
-    app:mrl_rippleInAdapter="true"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingBottom="12dp"
+    android:paddingLeft="30dp"
+    android:paddingRight="30dp"
+    android:paddingTop="12dp"
+    android:textSize="18sp">
 
-    <TextView
-        android:id="@android:id/text1"
-        android:paddingTop="12dp"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        android:paddingBottom="12dp"
-        android:textSize="18sp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </TextView>
-</com.balysv.materialripple.MaterialRippleLayout>
+</TextView>
