--- a/app/src/main/res/layout/favorite_list_item.xml
+++ b/app/src/main/res/layout/favorite_list_item.xml
@@ -1,34 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:background="?cardBackground"
-    android:padding="10dp"
-    app:mrl_rippleOverlay="true"
-    app:mrl_rippleInAdapter="true"
-    android:layout_height="wrap_content">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="?cardBackground"
+              android:orientation="horizontal"
+              android:padding="10dp">
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="60sp"
+        android:layout_height="60sp"
+        android:layout_gravity="center_vertical"/>
+
+    <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:lines="3"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:textColor="?attr/titleColor"
+        android:textSize="19sp"/>
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="60sp"
-            android:layout_gravity="center_vertical"
-            android:layout_height="60sp" />
-
-        <TextView
-            android:id="@+id/title"
-            android:textColor="?attr/titleColor"
-            android:layout_width="match_parent"
-            android:paddingLeft="5dp"
-            android:textSize="19sp"
-            android:paddingRight="5dp"
-            android:gravity="center_vertical"
-            android:layout_height="wrap_content"
-            android:lines="3" />
-
-    </LinearLayout>
-</com.balysv.materialripple.MaterialRippleLayout>
+</LinearLayout>
