--- a/app/src/main/res/layout/hot_comment_item.xml
+++ b/app/src/main/res/layout/hot_comment_item.xml
@@ -1,77 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.ywwxhz.hoderview.NewsHotCommentItemHoderView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:background="?cardBackground"
-    android:padding="10dp"
-    app:mrl_rippleOverlay="true"
-    app:mrl_rippleInAdapter="true"
-    tools:ignore="ContentDescription"
-    android:layout_height="wrap_content">
+                                                  android:layout_width="match_parent"
+                                                  android:layout_height="wrap_content"
+                                                  android:background="?cardBackground"
+                                                  android:padding="10dp">
 
-    <RelativeLayout
+    <ImageView
+        android:id="@+id/comment_image"
+        android:layout_width="38sp"
+        android:layout_height="38sp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginRight="6dp"/>
+
+    <TextView
+        android:id="@+id/comment_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginRight="2dp"
+        android:layout_toEndOf="@+id/comment_image"
+        android:layout_toLeftOf="@+id/comment_more"
+        android:layout_toRightOf="@+id/comment_image"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:textColor="?attr/titleColor"
+        android:textSize="17sp"/>
 
-        <ImageView
-            android:id="@+id/comment_image"
-            android:layout_width="38sp"
-            android:layout_height="38sp"
-            android:layout_marginRight="6dp"
-            android:layout_marginBottom="5dp" />
+    <TextView
+        android:id="@+id/comment_from"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/comment_name"
+        android:layout_alignLeft="@+id/comment_name"
+        android:layout_alignRight="@+id/comment_name"
+        android:layout_below="@+id/comment_name"
+        android:layout_marginBottom="2dp"
+        android:singleLine="true"
+        android:text="from"
+        android:textColor="?subTitleColor"
+        android:textSize="12sp"/>
 
-        <TextView
-            android:id="@+id/comment_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:textColor="?attr/titleColor"
-            android:layout_toLeftOf="@+id/comment_more"
-            android:textSize="17sp"
-            android:layout_toRightOf="@+id/comment_image"
-            android:layout_toEndOf="@+id/comment_image"
-            android:layout_marginRight="2dp" />
+    <TextView
+        android:id="@+id/comment_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/comment_image"
+        android:layout_marginBottom="2dp"
+        android:lineSpacingExtra="1dp"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
+        android:text="comment"
+        android:textSize="15sp"/>
 
-        <TextView
-            android:id="@+id/comment_from"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:text="from"
-            android:textColor="?subTitleColor"
-            android:textSize="12sp"
-            android:layout_below="@+id/comment_name"
-            android:layout_alignRight="@+id/comment_name"
-            android:layout_alignEnd="@+id/comment_name"
-            android:layout_marginBottom="2dp"
-            android:layout_alignLeft="@+id/comment_name" />
-
-        <TextView
-            android:id="@+id/comment_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:lineSpacingExtra="1dp"
-            android:paddingLeft="2dp"
-            android:paddingRight="2dp"
-            android:text="comment"
-            android:textSize="15sp"
-            android:layout_below="@+id/comment_image"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="2dp" />
-
-        <TextView
-            style="@style/SubText"
-            android:id="@+id/news_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="2dp"
-            android:paddingRight="2dp"
-            android:ellipsize="end"
-            android:layout_below="@+id/comment_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/news_title"
+        style="@style/SubText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/comment_content"
+        android:ellipsize="end"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"/>
 </com.ywwxhz.hoderview.NewsHotCommentItemHoderView>
