--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -1,101 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <com.ywwxhz.hoderview.NewsListItemHoderView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:mrl_rippleOverlay="true"
-    app:mrl_rippleInAdapter="true"
-    android:background="?cardBackground">
+                                            xmlns:app="http://schemas.android.com/apk/res-auto"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:background="?cardBackground"
+                                            android:orientation="vertical">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <com.ywwxhz.widget.ExtImageView
+        android:id="@+id/news_image_large"
+        app:ex_proportion="0.4"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        android:visibility="gone"/>
 
-        <com.ywwxhz.widget.ExtImageView
-            android:id="@+id/news_image_large"
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp">
+
+        <TextView
+            android:id="@+id/news_title"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:visibility="gone"
-            app:ex_proportion="0.4" />
+            android:paddingBottom="2dp"
+            android:textColor="?attr/titleColor"
+            android:textSize="20sp"/>
 
-
-        <RelativeLayout
-            android:layout_width="fill_parent"
+        <TextView
+            android:id="@+id/news_time"
+            style="@style/SubText"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="8dp">
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/news_title"
+            android:layout_toLeftOf="@+id/news_comments"
+            android:layout_toStartOf="@+id/news_comments"/>
+
+        <TextView
+            android:id="@+id/news_comments"
+            style="@style/SubText"
+            android:layout_width="52sp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/news_title"
+            android:layout_toLeftOf="@+id/news_views"
+            android:layout_toStartOf="@+id/news_views"
+            android:drawableLeft="@mipmap/ic_comments"
+            android:drawablePadding="2dp"
+            android:gravity="center"
+            android:paddingRight="2dp"/>
+
+        <TextView
+            android:id="@+id/news_views"
+            style="@style/SubText"
+            android:layout_width="58sp"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/news_title"
+            android:layout_alignRight="@+id/news_title"
+            android:layout_below="@+id/news_title"
+            android:drawableLeft="@mipmap/ic_views"
+            android:drawablePadding="2dp"
+            android:gravity="center"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/news_time"
+            android:orientation="horizontal"
+            android:paddingTop="4dp">
+
+            <ImageView
+                android:id="@+id/news_image_small"
+                android:layout_width="60sp"
+                android:layout_height="60sp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="5dp"
+                android:scaleType="centerCrop"
+                android:visibility="gone"/>
 
             <TextView
-                android:id="@+id/news_title"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:textColor="?attr/titleColor"
-                android:textSize="20sp"
-                android:paddingBottom="2dp" />
-
-            <TextView
-                style="@style/SubText"
-                android:id="@+id/news_time"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/news_title"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_toLeftOf="@+id/news_comments"
-                android:layout_toStartOf="@+id/news_comments" />
-
-            <TextView
-                style="@style/SubText"
-                android:id="@+id/news_comments"
-                android:layout_width="52sp"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@mipmap/ic_comments"
-                android:drawablePadding="2dp"
-                android:gravity="center"
-                android:paddingRight="2dp"
-                android:layout_below="@+id/news_title"
-                android:layout_toLeftOf="@+id/news_views"
-                android:layout_toStartOf="@+id/news_views" />
-
-            <TextView
-                style="@style/SubText"
-                android:id="@+id/news_views"
-                android:layout_width="58sp"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@mipmap/ic_views"
-                android:drawablePadding="2dp"
-                android:gravity="center"
-                android:layout_below="@+id/news_title"
-                android:layout_alignRight="@+id/news_title"
-                android:layout_alignEnd="@+id/news_title" />
-
-            <LinearLayout
+                android:id="@+id/news_summary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/news_time"
-                android:paddingTop="4dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/news_image_small"
-                    android:layout_width="60sp"
-                    android:layout_height="60sp"
-                    android:layout_gravity="center_vertical"
-                    android:visibility="gone"
-                    android:layout_marginRight="5dp"
-                    android:scaleType="centerCrop" />
-
-                <TextView
-                    android:id="@+id/news_summary"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:maxLines="4"
-                    android:ellipsize="end"
-                    android:textSize="13sp" />
-            </LinearLayout>
-        </RelativeLayout>
-    </LinearLayout>
-
+                android:ellipsize="end"
+                android:maxLines="4"
+                android:textSize="13sp"/>
+        </LinearLayout>
+    </RelativeLayout>
 </com.ywwxhz.hoderview.NewsListItemHoderView>
