update android studio 2.2,gradle 3.0,sdk 25
update resources

--- a/app/src/main/assets/style.css
+++ b/app/src/main/assets/style.css
@@ -123,6 +123,10 @@ a {
 	margin-left:.1em;
 	vertical-align:-.4em;
 }
+#content pre {
+    word-wrap: break-word;
+    word-break: break-all;
+}
 
 .clear {
 	clear:both;
