--- a/app/src/main/res/layout/hot_comment_item.xml
+++ b/app/src/main/res/layout/hot_comment_item.xml
@@ -4,64 +4,63 @@
                                                   android:layout_height="wrap_content"
                                                   android:background="?cardBackground"
                                                   android:padding="10dp">
-
     <ImageView
         android:id="@+id/comment_image"
         android:layout_width="38sp"
         android:layout_height="38sp"
         android:layout_marginBottom="5dp"
-        android:layout_marginRight="6dp"/>
+        android:layout_marginEnd="6dp"
+        android:layout_marginRight="6dp"
+        />
 
     <TextView
         android:id="@+id/comment_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="2dp"
+        android:layout_alignParentBottom="false"
         android:layout_toEndOf="@+id/comment_image"
-        android:layout_toLeftOf="@+id/comment_more"
         android:layout_toRightOf="@+id/comment_image"
         android:ellipsize="end"
-        android:singleLine="true"
+        android:maxLines="1"
+        android:text="title"
         android:textColor="?attr/titleColor"
         android:textSize="17sp"/>
 
     <TextView
         android:id="@+id/comment_from"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/comment_name"
-        android:layout_alignLeft="@+id/comment_name"
-        android:layout_alignRight="@+id/comment_name"
-        android:layout_below="@+id/comment_name"
-        android:layout_marginBottom="2dp"
-        android:singleLine="true"
+        android:layout_alignBottom="@+id/comment_image"
+        android:layout_toEndOf="@+id/comment_image"
+        android:layout_toRightOf="@+id/comment_image"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:text="from"
-        android:textColor="?subTitleColor"
+        android:textColor="?attr/subTitleColor"
         android:textSize="12sp"/>
 
     <TextView
         android:id="@+id/comment_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/comment_image"
-        android:layout_marginBottom="2dp"
         android:lineSpacingExtra="1dp"
-        android:paddingLeft="2dp"
-        android:paddingRight="2dp"
         android:text="comment"
-        android:textSize="15sp"/>
+        android:textSize="15sp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginTop="2dp"/>
 
     <TextView
         android:id="@+id/news_title"
         style="@style/SubText"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/comment_content"
         android:ellipsize="end"
-        android:paddingLeft="2dp"
-        android:paddingRight="2dp"/>
+        android:maxLines="1"
+        android:text="title"
+        android:layout_below="@+id/comment_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 </com.ywwxhz.hoderview.NewsHotCommentItemHoderView>
