--- a/app/src/main/res/layout/news_comment_item.xml
+++ b/app/src/main/res/layout/news_comment_item.xml
@@ -11,97 +11,91 @@
         android:layout_width="38sp"
         android:layout_height="38sp"
         android:layout_marginBottom="5dp"
-        android:layout_marginRight="6dp"/>
-
-    <TextView
-        android:id="@+id/comment_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="2dp"
-        android:layout_toEndOf="@+id/comment_image"
-        android:layout_toLeftOf="@+id/comment_more"
-        android:layout_toRightOf="@+id/comment_image"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:textColor="?attr/titleColor"
-        android:textSize="17sp"/>
-
-    <TextView
-        android:id="@+id/comment_from"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/comment_name"
-        android:layout_alignLeft="@+id/comment_name"
-        android:layout_alignRight="@+id/comment_name"
-        android:layout_below="@+id/comment_name"
-        android:layout_marginBottom="2dp"
-        android:singleLine="true"
-        android:text="from"
-        android:textColor="?attr/subTitleColor"
-        android:textSize="12sp"/>
+        android:layout_marginEnd="6dp"
+        android:layout_marginRight="6dp"
+        />
 
     <ImageView
         android:id="@+id/comment_more"
         android:layout_width="30sp"
         android:layout_height="30sp"
-        android:layout_alignEnd="@+id/comment_reason"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/comment_reason"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:src="@drawable/ic_more"/>
+
+    <TextView
+        android:id="@+id/comment_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="false"
+        android:layout_toEndOf="@+id/comment_image"
+        android:layout_toLeftOf="@+id/comment_more"
+        android:layout_toRightOf="@+id/comment_image"
+        android:layout_toStartOf="@+id/comment_more"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:text="title"
+        android:textColor="?attr/titleColor"
+        android:textSize="17sp"/>
+
+    <TextView
+        android:id="@+id/comment_from"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/comment_image"
+        android:layout_toEndOf="@+id/comment_image"
+        android:layout_toLeftOf="@+id/comment_more"
+        android:layout_toRightOf="@+id/comment_image"
+        android:layout_toStartOf="@+id/comment_more"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:text="from"
+        android:textColor="?attr/subTitleColor"
+        android:textSize="12sp"/>
 
     <TextView
         android:id="@+id/comment_ref"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/comment_image"
-        android:layout_marginBottom="4dp"
         android:background="?attr/refBackground"
         android:lineSpacingExtra="1dp"
         android:padding="4dp"
+        android:text="ref"
         android:textSize="15sp"/>
 
     <TextView
         android:id="@+id/comment_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/comment_ref"
-        android:layout_marginBottom="2dp"
-        android:lineSpacingExtra="1dp"
-        android:paddingLeft="2dp"
-        android:paddingRight="2dp"
-        android:text="comment"
-        android:textSize="15sp"/>
-
-    <TextView
-        android:id="@+id/comment_time"
-        style="@style/SubText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/comment_content"
-        android:layout_toLeftOf="@+id/comment_score"
-        android:layout_toStartOf="@+id/comment_score"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:text="time"/>
+        android:layout_below="@+id/comment_ref"
+        android:layout_marginBottom="2dp"
+        android:layout_marginTop="2dp"
+        android:lineSpacingExtra="1dp"
+        android:text="comment"
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@+id/comment_reason"
         style="@style/SubText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/comment_content"
-        android:layout_alignRight="@+id/comment_content"
+        android:layout_alignBottom="@+id/comment_score"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_below="@+id/comment_content"
-        android:layout_marginRight="2dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:drawableLeft="@mipmap/ic_reason"
         android:drawablePadding="5dp"
+        android:focusable="false"
         android:gravity="center"
         android:minWidth="50sp"
         android:text="999+"/>
@@ -111,13 +105,33 @@
         style="@style/SubText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/comment_reason"
-        android:layout_marginRight="4dp"
+        android:layout_alignBottom="@+id/comment_time"
+        android:layout_below="@+id/comment_content"
+        android:layout_marginEnd="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginStart="2dp"
         android:layout_toLeftOf="@+id/comment_reason"
         android:layout_toStartOf="@+id/comment_reason"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:drawableLeft="@mipmap/ic_score"
         android:drawablePadding="5dp"
+        android:focusable="false"
         android:gravity="center"
         android:minWidth="50sp"
         android:text="99+"/>
+
+    <TextView
+        android:id="@+id/comment_time"
+        style="@style/SubText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/comment_content"
+        android:layout_toLeftOf="@+id/comment_score"
+        android:layout_toStartOf="@+id/comment_score"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:text="time"/>
 </com.ywwxhz.hoderview.NewsCommentItemHoderView>
