--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
@@ -25,7 +25,7 @@
         android:text="@string/load_fail"
         android:visibility="gone" />
 
-    <com.melnykov.fab.FloatingActionButton
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/action"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -34,6 +34,5 @@
         android:alpha="0.8"
         android:visibility="gone"
         android:src="@mipmap/ic_comment"
-        app:fab_colorNormal="?colorPrimary"
-        app:fab_colorPressed="?colorPrimaryDark"/>
-</FrameLayout>
+        />
+</android.support.design.widget.CoordinatorLayout>
