--- a/app/src/main/res/layout/drawer_head_layout.xml
+++ b/app/src/main/res/layout/drawer_head_layout.xml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
     <ImageView
-        android:src="?attr/colorPrimary"
-        android:scaleType="centerCrop"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/drawer_header_height"/>
+        android:layout_height="@dimen/drawer_header_height"
+        android:scaleType="centerCrop"
+        android:src="?attr/colorPrimary" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/drawer_header_height"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:gravity="bottom|left"
+        android:paddingBottom="20dp"
+        android:paddingLeft="25dp"
+        android:text="@string/app_name"
+        android:textColor="@android:color/white"
+        android:textSize="25sp" />
 
 </RelativeLayout>
