--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -36,13 +36,13 @@
             android:title="@string/pref_auto_image_title"
             android:disableDependentsState="true"/>
         <CheckBoxPreference
-            android:defaultValue="true"
-            android:key="check_box_preference_1"
-            android:summary="@string/pref_show_detail_image_summary"
-            android:title="@string/pref_show_detail_image_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:dependency="@string/pref_auto_image_key"/>
+            android:defaultValue="true"
+            android:dependency="@string/pref_auto_image_key"
+            android:key="@string/pref_show_detail_image_key"
+            android:summary="@string/pref_show_detail_image_summary"
+            android:title="@string/pref_show_detail_image_title" />
         <CheckBoxPreference
             android:defaultValue="true"
             android:key="@string/pref_preload_image_key"
@@ -73,6 +73,10 @@
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/pref_advience_categroy">
+        <Preference
+            android:key="@string/pref_block_list_key"
+            android:summary="@string/pref_block_list_summary"
+            android:title="@string/pref_block_list_title" />
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_debug_key"
