--- a/app/src/main/res/layout/fragment_new_comment.xml
+++ b/app/src/main/res/layout/fragment_new_comment.xml
@@ -13,7 +13,8 @@
         android:gravity="top|left"
         android:hint="尽情的开喷吧。。"
         android:lines="5"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:textColor="@color/textColor" />
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
