--- a/app/src/main/res/layout/fragment_new_comment.xml
+++ b/app/src/main/res/layout/fragment_new_comment.xml
@@ -14,7 +14,7 @@
         android:hint="尽情的开喷吧。。"
         android:lines="5"
         android:padding="10dp"
-        android:textColor="@color/textColor" />
+        android:textColor="@android:color/black" />
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
